Refactor various classes to suppress deprecation warnings and improve code clarity
- Updated AsyncRegister to use a generic RegistrationExecutor type for better type safety.
- Added suppress warnings annotations in PasswordSecurity, Argon2, XAuth, BukkitService, MigrationService, and YamlFileResourceProvider to address deprecation issues.
- Enhanced BackupService to utilize ProcessBuilder for command execution, improving argument handling.
- Cleaned up unused imports and improved error handling in GeoIpService and BungeeReceiver.
- Removed unused method isLoopbackAddress in InternetProtocolUtils for cleaner code.